tests/neg/enum-repeated-extend-4470.scala
object RepeatedExtendEnum {

  enum Maybe[T] { // error // error
    case Foo extends Maybe[Int]
  }

  enum Maybe[T] { // error
    case Foo extends Maybe[Int]
  }
}
